--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -144,6 +144,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       code restructuring (src/engine/SCons -> SCons)
     - Drop the with_metaclass jig which was designed to let class
       definitions using a metaclass be written the same for Py2/Py3.
+    - Bump python_version_unsupported (and deprecated) to indicate 3.5
+      is lowest supported Python.
 
 
 
