Add a check for bad opts which are abbrev of good
Adds a post-processing step called after sconscript processing
is done which checks if there are any leftover options. Previously,
some options would sneak through silently if they were an
abbreviation of another option added by AddOption.

Fixes #3653

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -162,6 +162,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       check and test is no longer needed.
     - Close various logfiles (trace, cache, taskmastertrace, configure)
       when done using atexit calls.
+    - Generate an error if AddOption uses an "abbreviation" for an option
+      string (e.g. via a user error) rather than swallowing silently (#3653)
 
 
 
