If ParseFlags called with dict argument, leave unchanged
Previously, if the dict values were mutable elements, i.e. lists,
and the key was not for a *PATH variable, the value would be
reversed before being processed into the env. Instead use
a slice to iterate over.

Fixes issue #3665

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -147,6 +147,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       definitions using a metaclass be written the same for Py2/Py3.
     - Bump python_version_unsupported (and deprecated) to indicate 3.5
       is lowest supported Python.
+    - ParseFlags should not modify the user's passed in dict in case it's
+      a compound data structure (e.g. values are lists) (issue #3665)
 
 
 
