Extend `Environment.Dump()` to select serialization format
Environment.Dump() produces pretty-printable results only, so the
usefulness of this method is limited to debugging purposes.

The existing method is extended to allow selecting a serialization
format to use via a `format` parameter. Namely, it's now possible to
serialize variables as a JSON-formatted string, which makes it possible
for automated external tools to inspect the environment more easily.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Reorganized source tree. Moved src/engine/SCons to SCons to be more in line with current Python source
       tree organization practices.
 
+  From Andrii Doroshenko:
+    - Extended `Environment.Dump()` to select a format to serialize construction variables (pretty, json).
+
   From Jeremy Elson:
     - Updated design doc to use the correct syntax for Depends()
 
