--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,9 @@ NOTE: Please include a reference to any Issues resolved by your changes in the b
 
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
+  From Dirk Baechle:
+    - Added Docker images for building and testing SCons. (issue #3585)
+
   From James Benton:
     - Improve Visual Studio solution/project generation code to add support
       for a per-variant cppflags. Intellisense can be affected by cppflags,
