--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -57,7 +57,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       Setting COMPILATIONDB_USE_ABSPATH to True|False controls whether the files are absolute or relative
       paths.  Address Issue #3693 and #3694 found during development.
     - Fixed Github Issue 3628 - Hardcoding pickle protocol to 4 (supports python 3.4+)
-      and skipping Python 3.8's new pickle protocol 5 whose main advantage is for out-of-band data buffers
+      and skipping Python 3.8's new pickle protocol 5 whose main advantage is for out-of-band data buffers.
+      NOTE: If you used Python 3.8 with SCons 3.0.0 or above, you may get a a pickle protocol error. Remove your
+      .sconsign.dblite. You will end up with a full rebuild.
 
   From Andrii Doroshenko:
     - Extended `Environment.Dump()` to select a format to serialize construction variables (pretty, json).
