Add changes for MSVS 2015+ generated project/solution tests on x86.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -38,6 +38,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       (GH Issue #3699).
     - MSVC updates: An MSVC 6.0 installation now appears in the installed versions list
       when msvc debug output is enabled (GH Issue #3699).
+    - MSVS test updates: Tests for building a program using generated MSVS project and
+      solution files using MSVS 2015 and later now work as expected on x86 hosts.
  
   From William Deegan:
     - Fix broken clang + MSVC 2019 combination by using MSVC configuration logic to
