--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,16 @@ RELEASE 4.1.0.devyyyymmdd - Mon, 04 Jul 2020 16:06:40 -0700
       From John Doe:
 
         - Whatever John Doe did.
+  
+  From Eugene Huang:
+    - Ensure all Node subclasses return 'bytes' in their get_contents()
+      methods. This was causing problems in Value.get_text_contents() as
+      'str' types do not have a decode() method.
+    - Make sure Value.get_contents() never fails because of decoding errors
+      from trying to decode child nodes binary contents. Modify
+      Value.get_csig() to use get_contents() as basis for csig instead since
+      get_text_contents() is prone to decoding errors, which prevented Value
+      nodes from being used as targets in some cases.
 
     
 RELEASE 4.0.0 - Sat, 04 Jul 2020 12:00:27 +0000
