--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scons (4.0.1) unstable; urgency=low
+
+  * Maintenance Release
+
+ -- William Deegan <bill@baddogconsulting.com>  Thu, 16 Jul 2020 15:04:42 -0700
+
 scons (4.0.0) unstable; urgency=low
 
   * Maintenance Release
