Enable environment dict.setdefault
setdefault() now works on SubstitutionEnvironment and OverrideEnvironment.
Unittests added for that.

OverrideEnvironment Dictionary() method was not accepting the one-arg
and multi-arg forms that are documented for the regular env.Dictionary().
Not detected because the testcase also didn't test that; updated.
Testcase was misnamed, duplicated test_items - not sure if that
mattered or not.

Tests did not exist for OverrideEnvironment keys() and values() methods.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
         - Whatever John Doe did.
 
+  From Mats Wichmann:
+    - Complete tests for Dictionary, env.keys() and env.values() for
+      OverrideEnvironment. Enable env.setdefault() method, add tests.
+
 
 RELEASE 4.0.1 - Mon, 16 Jul 2020 16:06:40 -0700
 
